--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -9,15 +9,18 @@ actemail = 0
 timetype = hour
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
-timeint = 3
+timeint = 7
 
 
 
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
-#CP4 = LTECP4,nokianpo4,GDlte_123
-CP2 = LTECP2,zj2015nsnnpo,GDlte_123
+CP1 = LTECP1,yjnpo,GDlte_123
+# CP2 = LTECP2,zj2015nsnnpo,GDlte_123
+# CP3 = LTECP3,cznpo,GDlte_123
+# CP4 = LTECP4,nokianpo4,GDlte_123
+# CP5 = LTECP5,czuser,GDlte_123
 
-
+# 程序所使用到的sql，此处请不要轻易改动
 [SQL_name]
 main_kpi_day = city_day_kpi,city,day
 main_vokpi_day = city_VOLTE_DAY,city,day
@@ -74,23 +77,17 @@ ESRVCC失败次数 = !=,0
 mail_host = smtp.163.com
 mail_user = cz_nokia@163.com
 mail_pwd = nokia123
-;mail_host = smtp.21cn.com
-;mail_user = cz_nokia@21cn.com
-;mail_pwd = Nokia123
+# mail_host = smtp.21cn.com
+# mail_user = cz_nokia@21cn.com
+# mail_pwd = Nokia123
 
-#sender = lxuteng@163.com
+# 设置收件人邮箱，多个邮箱地址之间用 , 隔开
+# sender = lxuteng@163.com
 receivers = 13829746035@139.com,15016519785@139.com,13828392621@139.com,18507684896@139.com,13829041415@139.com,guozxun@163.com,cz_nokia@163.com,cz_nokia@21cn.com
-;receivers = 13829746035@139.com,174626239@qq.com,cz_nokia@163.com
-;receivers = 13829746035@139.com
+# receivers = 13829746035@139.com,174626239@qq.com,cz_nokia@163.com
+# receivers = 13829746035@139.com
 
-;subject = 潮州指标日报
+# 邮件主题，可以改成各个地市主题
+# subject = 潮州指标日报
 subject = 潮州日常kpi指标
-;subject = ！！重要，请留意！！--潮州实时监控通报！
-
-
-
-
-
-
-
-
+# subject = ！！重要，请留意！！--潮州实时监控通报！
