--- a/SQL_auto_down/config.ini
+++ b/SQL_auto_down/config.ini
@@ -1,49 +1,50 @@
 ﻿[config]
-#取数时间,如果为空，则默认为昨天
+#取数时间,如 20160808 如果为空，则默认为昨天
 day = 
 #时段
 star_hour = 00
 end_hour = 23
 #脚本存放目录
-SQL_path = D:\python\1_tools\SQL_auto_down\sql脚本\15A
-[db]#请按此格式填写 名称 = 数据库名称,user,pwd ，可以添加多个数据库
+SQL_path = D:\1_tools\1_autorun\SQL_auto_down\sql脚本\15A
+
+
+[db]
+#请按此格式填写 名称 = 数据库名称,user,pwd ，可以添加多个数据库
 #CP4 = 188.2.142.135:1521/oss,nokianpo4,GDlte_123
 #CP4 = LTECP4,nokianpo4,GDlte_123
 #CP3 = LTECP3,cznpo,GDlte_123
 CP2 = LTECP2,zj2015nsnnpo,GDlte_123
+
+
 [SQL_name]
 #SQL脚本名称、取数粒度及存放目录，规则为 名称 = SQL脚本名,取数粒度,存放路径,SQL重命名
 #例：
 #sqlx = SQL_name,SQL_time_type,SQL_downpath,SQL_rename
 #其中：
-#SQL_time_type为SQL取数粒度，可以为'day','hour','raw'
+#SQL_time_type为SQL取数粒度，可以为'day','hour','raw','para'
+#其中设置下为'day','hour','raw'顾名思义，就是分别提取day/hour/15分钟级的指标；
+#其中设置为'para'，如果要备份参数，请将此设置为 para
 #SQL_downpath为SQL查询结果存放目录
-#sql1 = cell_day_kpi,day,E:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\DAY,kpi_day_R55
-#sql2 = cell_hour_kpi,hour,E:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\HOUR,kpi_HOUR_R55
-#sql3 = INTERRERENCE-day,day,E:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\day,底噪_day_R55
-#sql4 = INTERRERENCE-hour,hour,E:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\hour,底噪_hour_R55
-#sql5 = VOLTE_HOUR,hour,E:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\volte\hour,volte_hour_R55
-#sql6 = VOLTE_DAY,day,E:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\volte\day,volte_day_R55
+#在'SQL重命名'字段，前面加上 '$' 符号，对应的sql脚本查询结果累加到同一个文件下（次主要用来统计整网汇总的指标，方便以后查看指标趋势）
 
-#sql11 = cell_day_kpi,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\DAY,kpi_day_15A
-#sql21 = cell_hour_kpi,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\HOUR,kpi_HOUR_15A
-#sql31 = INTERRERENCE-day,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\day,底噪_day
-#sql41 = INTERRERENCE-hour,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\hour,底噪_hour
-#sql51 = VOLTE_HOUR,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\volte\hour,volte_hour
-#sql61 = VOLTE_DAY,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\volte\day,volte_day
 
-#sql1 = KPI_Benchmark_TD-LTE_TL15A_cell_day_guangdong,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\全省统一备份\day,kpi_day_com
-#sql2 = KPI_Benchmark_TD-LTE_TL15A_cell_hour_guangdong,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\全省统一备份\hour,kpi_hour_com
+sql11 = cell_day_kpi, day, F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\DAY, kpi_day_15A
+sql21 = cell_hour_kpi,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\HOUR,kpi_HOUR_15A
+sql31 = INTERRERENCE-day,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\day,底噪_day
+sql41 = INTERRERENCE-hour,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\hour,底噪_hour
+sql51 = VOLTE_HOUR,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\volte\hour,volte_hour
+sql61 = VOLTE_DAY,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\volte\day,volte_day
 
-city_day = city_day_kpi,day,C:\Users\lxute\Desktop\工作临时文件夹\text,city_day
-city_hour = city_hour_kpi,hour,C:\Users\lxute\Desktop\工作临时文件夹\text,city_hour
-city_vo_day = city_VOLTE_DAY,day,C:\Users\lxute\Desktop\工作临时文件夹\text,city_vo_day
-city_vo_hour = city_VOLTE_HOUR,hour,C:\Users\lxute\Desktop\工作临时文件夹\text,city_vo_hour
 
-city_day1 = city_day_kpi,day,C:\Users\lxute\Desktop\工作临时文件夹\text,$city_day
-city_hour1 = city_hour_kpi,hour,C:\Users\lxute\Desktop\工作临时文件夹\text,$city_hour
-city_vo_day1 = city_VOLTE_DAY,day,C:\Users\lxute\Desktop\工作临时文件夹\text,$city_vo_day
-city_vo_hour1 = city_VOLTE_HOUR,hour,C:\Users\lxute\Desktop\工作临时文件夹\text,$city_vo_hour
+city_day = city_day_kpi,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\day,city_day
+city_hour = city_hour_kpi,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\hour,city_hour
+city_vo_day = city_VOLTE_DAY,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\vo_day,city_vo_day
+city_vo_hour = city_VOLTE_HOUR,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\vo_hour,city_vo_hour
+
+city_day1 = city_day_kpi,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\day,$Total_city_day
+city_hour1 = city_hour_kpi,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\hour,$Total_city_hour
+city_vo_day1 = city_VOLTE_DAY,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\vo_day,$Total_city_vo_day
+city_vo_hour1 = city_VOLTE_HOUR,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\City\vo_hour,$Total_city_vo_hour
 
 #sql3 = lnrel,para,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\参数,lnrel_
 
