--- a/MRparse/config.ini
+++ b/MRparse/config.ini
@@ -1,17 +1,46 @@
-[main]
+﻿[config]
 
-# 文件类型，可以为“gz","xml"
-filetype = 
-# MR解码类型，可以为“MRO”，“MRE”，“MRS”
-parsetype =  
 
-[MRE]
+#支持直接读取 tar.gz 文档，设置为 'gz' 则处理tar.gz，设置为 'xml'  则处理xml文档 ，不填则默认处理'xml'文档
+targz = gz
 
+#支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
+parse_type = MRS
+
+
+#MR原始数据存放目录
+path = D:\python\1_tools\MR_parse\test
+
+#MR解码结果存放目录
+local_path = D:\python\1_tools\MR_parse\test
+
+#定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
+#当激活定时功能时，会默认读取 path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
+timing =
+
+
+[MRS]
+#处理MRsheet，如果只需要MR中的某个sheet，则可以在这里设置
+#parse_sheet = MR.RSRP
+parse_sheet = MR.RSRP
+
+
+#例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
+exception_sheet = MR.RIPPRB
+
+#汇总类型可以为 'hour','id','all'
+#设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
+#设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
+#设置为all时，则会同时生成以上两种类型的数据
+parse_sumtype = id
 
 
 [MRO]
 
-
-
-
-[MRS]
+#重叠覆盖率门限
+#门限1
+overlap_db_1 = -3
+overlap_ncell_rsrp_1 = -113
+#门限2
+overlap_db_2 = -6
+overlap_ncell_rsrp_2 = -113
