2016年11月15日 新增最大用户数检测功能；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -6,7 +6,7 @@ actemail = 0
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = hour
+timetype = day
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
@@ -14,8 +14,8 @@ timeint = 7
 
 
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
-CP1 = LTECP1,yjnpo,GDlte_123
-# CP2 = LTECP2,zj2015nsnnpo,GDlte_123
+# CP1 = LTECP1,yjnpo,GDlte_123
+CP2 = LTECP2,zj2015nsnnpo,GDlte_123
 # CP3 = LTECP3,cznpo,GDlte_123
 # CP4 = LTECP4,nokianpo4,GDlte_123
 # CP5 = LTECP5,czuser,GDlte_123
@@ -42,6 +42,12 @@ top_kpi_raw = top_kpi_raw,cell,hour
 sleepingcell = sleepingcell,cell,hour
 sleepingcell_raw = sleepingcell_raw,cell,hour
 alarm = alarm,cell,hour
+############
+# 2016-11-14新增
+maxue_day = maxue_day,cell,hour
+maxue_hour = maxue_hour,cell,hour
+maxue_raw = maxue_raw,cell,hour
+
 
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
@@ -52,7 +58,7 @@ sdate = '',''
 city = '',''
 用户面PDCP上行数据量GB = '',''
 用户面PDCP下行数据量GB = '',''
-RRC连接建立成功率 = <=,99.8
+RRC连接建立成功率 = <=,99.9
 ERAB建立成功率 = <=,99.8
 无线接通率 = <=,98
 无线掉线率 = >=,1
