--- a/SQL_auto_down/config.ini
+++ b/SQL_auto_down/config.ini
@@ -1,12 +1,20 @@
 ﻿[config]
-#取数时间,如 20160808 如果为空，则默认为昨天
-day = 
+#取数时间,如 20160808 如果为空，则默认为昨天；
+#多天使用 ， 隔开
+day = 20161101,20161102
 #时段
 star_hour = 00
 end_hour = 23
-#脚本存放目录
-SQL_path = D:\1_tools\1_autorun\SQL_auto_down\sql脚本\15A
+#脚本存放目录，不填默认为 程序目录\sql
+SQL_path =
 
+# 查询结果默认存放目录，不填默认为程序目录
+local_path = C:\Users\lxute\Desktop\工作临时文件夹
+
+# 是否按日期分文件夹存放,设置为 1 则查询结果会根据day来分文件夹存放查询结果
+# 当设置为 1 时，[SQL_name]中各个sql查询任务设置的 存放路径 将失效，取而代之的是 local_path 设置的路径
+# 设置为 0 或 空，不按day分类存放
+day_classify =
 
 [db]
 #请按此格式填写 名称 = 数据库名称,user,pwd ，可以添加多个数据库
@@ -24,11 +32,11 @@ CP2 = LTECP2,zj2015nsnnpo,GDlte_123
 #SQL_time_type为SQL取数粒度，可以为'day','hour','raw','para'
 #其中设置下为'day','hour','raw'顾名思义，就是分别提取day/hour/15分钟级的指标；
 #其中设置为'para'，如果要备份参数，请将此设置为 para
-#SQL_downpath为SQL查询结果存放目录
+#SQL_downpath为SQL查询结果存放目录，为空则默认为 local_path 指向的目录
 #在'SQL重命名'字段，前面加上 '$' 符号，对应的sql脚本查询结果累加到同一个文件下（次主要用来统计整网汇总的指标，方便以后查看指标趋势）
 
 
-sql11 = cell_day_kpi, day, F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\DAY, kpi_day_15A
+sql11 = cell_day_kpi,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\DAY,kpi_day_15A
 sql21 = cell_hour_kpi,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\kpi\RL55\HOUR,kpi_HOUR_15A
 sql31 = INTERRERENCE-day,day,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\day,底噪_day
 sql41 = INTERRERENCE-hour,hour,F:\1_数据备份\2_KPI\1.潮州NPO数据备份\底噪\hour,底噪_hour
