--- a/SQL_auto_down/config.ini
+++ b/SQL_auto_down/config.ini
@@ -13,7 +13,7 @@ local_path = C:\Users\lxute\Desktop\工作临时文件夹
 
 # 是否按日期分文件夹存放,设置为 1 则查询结果会根据day来分文件夹存放查询结果
 # 当设置为 1 时，[SQL_name]中各个sql查询任务设置的 存放路径 将失效，取而代之的是 local_path 设置的路径
-# 设置为 0 或 空，不按day分类存放
+# 设置为 0 或 空，不按day分类存放；
 day_classify =
 
 [db]
