--- a/MRparse/config.ini
+++ b/MRparse/config.ini
@@ -5,14 +5,15 @@
 targz = gz
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
+#目前版本还未支持解码MRO
 parse_type = MRS
 
 
 #MR原始数据存放目录
-path = D:\python\1_tools\MR_parse\test
+path = C:\Users\lxute\Desktop\工作临时文件夹\1
 
 #MR解码结果存放目录
-local_path = D:\python\1_tools\MR_parse\test
+local_path = C:\Users\lxute\Desktop\工作临时文件夹\1
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -32,10 +33,18 @@ exception_sheet = MR.RIPPRB
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
 #设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
 #设置为all时，则会同时生成以上两种类型的数据
-parse_sumtype = id
+parse_sumtype = all
 
 
 [MRO]
+
+
+#汇总类型可以为 'hour','id','all'
+#设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
+#设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
+#设置为all时，则会同时生成以上两种类型的数据
+parse_sumtype = all
+
 
 #重叠覆盖率门限
 #门限1
@@ -44,3 +53,9 @@ overlap_ncell_rsrp_1 = -113
 #门限2
 overlap_db_2 = -6
 overlap_ncell_rsrp_2 = -113
+
+
+
+
+
+
