2016年11月30日 修复定时任务bug

--- a/MRparse/MR_parse/config.ini
+++ b/MRparse/MR_parse/config.ini
@@ -26,7 +26,6 @@ timing =
 #parse_sheet = MR.RSRP
 parse_sheet = MR.RSRP
 
-
 #例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
 exception_sheet = MR.RIPPRB
 
@@ -34,18 +33,15 @@ exception_sheet = MR.RIPPRB
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
 #设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
 #设置为all时，则会同时生成以上两种类型的数据
-gather_type = all
+gather_type = id
 
 
 [MRO]
-
-
 #汇总类型可以为 'hour','id','all'
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
 #设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
 #设置为all时，则会同时生成以上两种类型的数据
 gather_type = all
-
 
 #重叠覆盖率门限
 #门限1
