2016年12月2日 完成MRO重构

--- a/MRparse/MR_parse/config.ini
+++ b/MRparse/MR_parse/config.ini
@@ -2,7 +2,7 @@
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
 #目前版本还未支持解码MRO
-parse_type = all
+parse_type = mro
 
 # 支持直接读取 tar.gz 文档
 # 设置为 'gz' 则处理tar.gz
