--- a/AutoDownTools/config.ini
+++ b/AutoDownTools/config.ini
@@ -3,11 +3,11 @@
 
 [ip]
 #服务器ip，账号，密码,之间用 “,” 隔开，如果账号密码为空，则默认使用[key]中设置的账号密码
-ip1 = 188.2.136.244,richuser,richr00t
-ip2 = 188.2.136.93
+;ip1 = 188.2.136.95,richuser,richr00t
+;ip2 = 188.2.136.93
 ip3 = 188.2.136.241
-ip4 = 188.2.142.245
-ip5 = 188.2.142.247
+;ip4 = 188.2.142.245
+;ip5 = 188.2.142.247
 
 [key]
 ##账号密码（基站）
@@ -27,23 +27,23 @@ pwd = richr00t
 #vendor默认路径：/ffs/fs2
 #mr打包默认路径：remote_path = /home/richuser/tmp
 #remote_path = /home/richuser/l3fw_mr/kpi_import_gz
-remote_path = /home/richuser/l3fw_mr/rip_import
+remote_path = /home/richuser/l3fw_mr/kpi_import_gz
 
 
 ##存放本机路径
-local_path = D:\python\code\AutoDownTools
+local_path = C:\Users\lxute\Desktop\工作临时文件夹\1\test
 
 
 [filter]
 ##可以有多个关键字，用 “，”隔开
-filter_1 = RIP
+filter_1 = MRE
 
 ##可以有多个关键字，用 “，”隔开（此条件会合并到一起进行），如fileter_2_1 = 20160718  fileter_2_2 = 10  ，在过滤文件时会 以 2016071810 过滤
-filter_2_1 = 20160719
-filter_2_2 = 0100
+filter_2_1 = 20161130
+filter_2_2 =
 
 ##其他条件，此只允许一个关键字
-filter_3 = .csv
+filter_3 = .gz
 
 [other]
 ##是否按文件夹归类(只能按此三种类别归类：0 = "ip",1 = "filter_1",2 = "filter_2_1",如果不填则默认放在local_path设置的文件夹下)
@@ -51,21 +51,21 @@ classify =
 
 ##前缀(prefix_ip 设置为 1 则会在下载后的文件名前添加服务器IP，如果不添加IP，则设置为 0 或 放空）
 ## prefix允许自定义前缀
-prefix_ip = 1
-prefix = LTE_RIP
+prefix_ip =
+prefix =
 
 #定时功能：设置此功能可以每天自动生成一个，并将数据全部保存在此文件夹内
 # '0'或不填：去激活
 # '1' ：激活,且filter_2_1默认为今天日期，且所有文件存放在当天日期的文件夹内
 # '2' ：激活，且filter_2_1默认为昨天日期 ，且所有文件存放在昨天日期的文件夹内
 
-timing = 1
+timing =
 
 # 启用定时功能后，0点时段是否使用昨天日期
 # '0'：使用当天日期；
 # '1'：使用昨天日期
 
-timing_dyn = 0
+timing_dyn =
 
 # 下载完成后运行程序,输入调用程序完整路径
 # exe = E:\1_数据备份\4_RIP\RIPConv0.4.exe
