2016-12-29 新增解码MRO_EARFCN表，统计采集到的各个邻区频点的RSRP段信息；

--- a/MRparse/MR_parse/config.ini
+++ b/MRparse/MR_parse/config.ini
@@ -1,7 +1,6 @@
 ﻿[main]
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
-#目前版本还未支持解码MRO
 parse_type = mro
 
 # 支持直接读取 tar.gz 文档
@@ -11,7 +10,7 @@ parse_type = mro
 file_type =
 
 #MR原始数据存放目录
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\1
+source_path = C:\Users\lxute\Desktop\工作临时文件夹\1\MRO\新建文件夹
 
 #MR解码结果存放目录
 target_path = C:\Users\lxute\Desktop\工作临时文件夹\2
