2016-12-30 处理mrs时只能生成 MR.RSRP 表的bug

--- a/MRparse/MR_parser_plus/config.ini
+++ b/MRparse/MR_parser_plus/config.ini
@@ -16,7 +16,7 @@ parse_type = mrs
 file_type =
 
 #MR原始数据存放目录
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\1
+source_path = C:\Users\lxute\Desktop\工作临时文件夹\1\1\新建文件夹
 
 #MR解码结果存放目录
 target_path = C:\Users\lxute\Desktop\工作临时文件夹\2
