--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -68,11 +68,19 @@ ERAB掉线率 = >=,1
 小区可用率  = '',''
 拥塞次数 = '',''
 # ----------volte指标---------
-SDATETIME = '',''
+sdatetime = '',''
 QCI1话务量ERL = '',''
+QCI2话务量Erl = '',''
+QCI1最大用户数 = '',''
+QCI2最大用户数 = '',''
+QCI1流量Mb = '',''
+QCI2流量Mb = '',''
 QCI1_ERAB建立成功率  = <=,99
+qci2_erab建立成功率  = <=,99
 qci1_erab建立失败次数 = !=,0
+qci2_erab建立失败次数 = !=,0
 QCI1掉线率小区级  = >=,1
+QCI1掉线率网络级  = >=,1
 QCI1掉线次数 = !=,0
 ESRVCC成功率 = <=,95
 ESRVCC失败次数 = !=,0
