2017-2-8 增加部分TOP小区字段； 2017-2-9 新增自动关闭拥塞小区测量上报开关；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -6,11 +6,14 @@ actemail = 0
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = day
+timetype = raw_monitor
+
+# 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
+# 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
+autodisabledpmmeasurement = 1
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
-
 
 
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
@@ -20,8 +23,9 @@ CP2 = LTECP2,zj2015nsnnpo,GDlte_123
 # CP4 = LTECP4,nokianpo4,GDlte_123
 # CP5 = LTECP5,czuser,GDlte_123
 
-# 程序所使用到的sql，此处请不要轻易改动
+
 [SQL_name]
+# 程序所使用到的sql，此处请不要轻易改动
 main_kpi_day = city_day_kpi,city,day
 main_vokpi_day = city_VOLTE_DAY,city,day
 
@@ -97,11 +101,12 @@ mail_pwd = nokia123
 
 # 设置收件人邮箱，多个邮箱地址之间用 , 隔开
 # sender = lxuteng@163.com
-receivers = 13829746035@139.com,15016519785@139.com,13828392621@139.com,18507684896@139.com,13829041415@139.com,guozxun@163.com,cz_nokia@163.com,cz_nokia@21cn.com
+receivers = 13829746035@139.com,15016519785@139.com,13828392621@139.com,18507684896@139.com,13829041415@139.com,guozxun@163.com,cz_nokia@163.com,cz_nokia@21cn.com,369896223@qq.com
 # receivers = 13829746035@139.com,174626239@qq.com,cz_nokia@163.com
 # receivers = 13829746035@139.com
 
 # 邮件主题，可以改成各个地市主题
 # subject = 潮州指标日报
 subject = 潮州日常kpi指标
+# subject = 潮州15分钟实时通报
 # subject = ！！重要，请留意！！--潮州实时监控通报！
