2017年4月18日 完善MRO解码，支持使用MRO解码MR覆盖率；支持过滤并解码原始文件；

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -3,7 +3,7 @@
 # 如果不清楚电脑多少核心，可以输入'min','mid','max'
 # 其中，min为单线程；mid为电脑核心的一半；max为满负荷运行
 # 放空或0则默认为满负荷运行
-process = 1
+process = max
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
 parse_type = mro
@@ -12,15 +12,15 @@ parse_type = mro
 # 设置为 'gz' 则处理tar.gz
 # 设置为 'xml'  则处理xml文档
 # 不填则自动判断文件格式
-file_type = xml
+file_type = gz
 
 #MR原始数据存放目录
-;source_path = C:\Users\lxute\Desktop\工作临时文件夹\mro
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹
+;source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
+source_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412\1\1
 
 #MR解码结果存放目录
-;target_path = C:\Users\lxute\Desktop\工作临时文件夹\mro
-target_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹
+target_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412\1\2
+;target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 source_path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -56,6 +56,20 @@ overlap_ncell_rsrp_1 = -113
 overlap_db_2 = 6
 overlap_ncell_rsrp_2 = -113
 
+# MRO解码MR覆盖率门限
+mr_lap = -110
+
+
+[filter]
+# 文件过滤器
+# 如果 active_filter 设置为 1，则激活下面过滤器
+# 如果 active_filter 设置为 0 或 空，则不激活过滤器
+# 当激活过滤器后，符合过滤器条件的原始文件会被解压到硬盘，如果全网级解码的话，并不需要原始文件的，请留意关闭此功能
+# filter_type 可以设置为 mro或 mrs , 都要的话，则设置为 mro,mrs 或 空
+# filter_id 可以设置为需要解码的ENBID，多个间使用 , 隔开
+active_filter = 0
+filter_type = mro
+filter_id = 701564,701655
 
 
 
