2017年4月18日  修复MRO bug

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -6,7 +6,7 @@
 process = max
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
-parse_type = mro
+parse_type = all
 
 # 支持直接读取 tar.gz 文档
 # 设置为 'gz' 则处理tar.gz
@@ -16,10 +16,10 @@ file_type = gz
 
 #MR原始数据存放目录
 ;source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412\1\1
+source_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (5)
 
 #MR解码结果存放目录
-target_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412\1\2
+target_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (5)
 ;target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
@@ -30,7 +30,7 @@ timing =
 [MRS]
 #处理MRsheet，如果只需要MR中的某个sheet，则可以在这里设置
 #parse_sheet = MR.RSRP
-mrs_parse_sheet =
+mrs_parse_sheet = MR.RSRP
 
 #例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
 mrs_exception_sheet = MR.RIPPRB
