2017-4-19 添加 mro_rsrp 表，记录的为MR覆盖率各个RSRP等级分别情况，同mrs解码的MR.RSRP表；

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -6,7 +6,7 @@
 process = max
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
-parse_type = all
+parse_type = mrs
 
 # 支持直接读取 tar.gz 文档
 # 设置为 'gz' 则处理tar.gz
@@ -15,12 +15,12 @@ parse_type = all
 file_type = gz
 
 #MR原始数据存放目录
-;source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (5)
+# source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
+source_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412
 
 #MR解码结果存放目录
-target_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (5)
-;target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
+target_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412
+#target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 source_path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -35,18 +35,11 @@ mrs_parse_sheet = MR.RSRP
 #例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
 mrs_exception_sheet = MR.RIPPRB
 
-#汇总类型可以为 'hour','id','all'
-#设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
-#设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
-#设置为all时，则会同时生成以上两种类型的数据
-gather_type = id
-
-
 [MRO]
 # 需要生成的mro解码结果
-# 目前支持 mro_main、mro_ecid 两张表
+# 目前支持 mro_main、mro_ecid、mro_rsrp
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_main,mro_ecid
+mro_parse_sheet = mro_main,mro_ecid,mro_rsrp
 
 #重叠覆盖率门限
 #门限1
