2017-4-24 添加进度条；

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -6,7 +6,7 @@
 process = max
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
-parse_type = mrs
+parse_type = all
 
 # 支持直接读取 tar.gz 文档
 # 设置为 'gz' 则处理tar.gz
@@ -16,10 +16,10 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412
+source_path = D:\test\mro
 
 #MR解码结果存放目录
-target_path = C:\Users\lxute\Desktop\工作临时文件夹\mro\新建文件夹\20170412
+target_path = D:\test\output
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
@@ -60,9 +60,11 @@ mr_lap = -110
 # 当激活过滤器后，符合过滤器条件的原始文件会被解压到硬盘，如果全网级解码的话，并不需要原始文件的，请留意关闭此功能
 # filter_type 可以设置为 mro或 mrs , 都要的话，则设置为 mro,mrs 或 空
 # filter_id 可以设置为需要解码的ENBID，多个间使用 , 隔开
+# filter_hour 可以设置需要解码的时段（小时），多个时段使用 , 隔开（时段需使用两位数，如提取1:00时段的，需填 01）
 active_filter = 0
 filter_type = mro
-filter_id = 701564,701655
+filter_id = 659712,659713
+filter_hour =
 
 
 
