2017-5-2 增加解码表类型 mro_ecid_hour，此表为mro_ecid的小时级表；

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -35,7 +35,6 @@ timing =
 
 [MRS]
 #处理MRsheet，如果只需要MR中的某个sheet，则可以在这里设置
-#parse_sheet = MR.RSRP
 mrs_parse_sheet = MR.RSRP
 
 #例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
@@ -44,11 +43,11 @@ mrs_exception_sheet = MR.RIPPRB
 [MRO]
 # MRO转换成RSRP基准点，目前支持 140 141 两个门限值
 mro_rsrp_standard = 141
+
 # 需要生成的mro解码结果
-# 目前支持 mro_main、mro_ecid、mro_rsrp
+# 目前支持 mro_main、mro_ecid、mro_ecid_hour、mro_rsrp
 # 处理多张表用 ， 隔开
 mro_parse_sheet = mro_main,mro_ecid,mro_rsrp
-;mro_parse_sheet = mro_rsrp
 
 #重叠覆盖率门限
 #门限1
