--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -16,7 +16,7 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (5)
+source_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (6)
 
 #MR解码结果存放目录
 target_path = D:\test\output
@@ -26,7 +26,7 @@ target_path = D:\test\output
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
 #设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
 #如果两者都需要，则设置为 'hour','ecid'
-gather_type = hour,ecid
+gather_type = ecid
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 source_path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -47,7 +47,7 @@ mro_rsrp_standard = 141
 # 需要生成的mro解码结果
 # 目前支持 mro_main、mro_ecid、mro_ecid_hour、mro_rsrp
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_main,mro_ecid,mro_rsrp
+mro_parse_sheet = mro_rsrp
 
 #重叠覆盖率门限
 #门限1
@@ -72,7 +72,7 @@ mr_lap = -110
 active_filter = 0
 filter_type = mro
 filter_id = 659712,659713
-filter_hour = 14
+filter_hour = 12
 
 
 
