2017-6-14 支持多线程，效率大幅提升；

--- a/Auto_cmd/config.ini
+++ b/Auto_cmd/config.ini
@@ -1,4 +1,12 @@
 [main]
+thread_num = 100
+
+[login]
+username = toor4nsn
+password = oZPS0POrRieRtu
+port = 22
 
 [ping]
-target_ip = 100.65.220.111,100.95.224.10
+active_ping = 1
+ping_num = 10
+target_ip = 100.65.255.219
