--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -3,7 +3,7 @@
 # 如果不清楚电脑多少核心，可以输入'min','mid','max'
 # 其中，min为单线程；mid为电脑核心的一半；max为满负荷运行
 # 放空或0则默认为满负荷运行
-process = max
+process = 1
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
 parse_type = all
@@ -16,17 +16,17 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\lxute\Desktop\工作临时文件夹\新建文件夹 (6)
+source_path = C:\Users\Ten\Desktop\工作临时文件夹\MRO\新建文件夹
 
 #MR解码结果存放目录
-target_path = D:\test\output
+target_path = C:\Users\Ten\Desktop\工作临时文件夹\MRO\新建文件夹
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
-#汇总类型可以为 'hour','ecid'
+#汇总类型可以为 'hour','sum'
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
-#设置为 id 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
-#如果两者都需要，则设置为 'hour','ecid'
-gather_type = ecid
+#设置为 sum 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
+#如果两者都需要，则设置为 'hour','sum'
+gather_type = sum
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 source_path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -45,9 +45,9 @@ mrs_exception_sheet = MR.RIPPRB
 mro_rsrp_standard = 141
 
 # 需要生成的mro解码结果
-# 目前支持 mro_main、mro_ecid、mro_ecid_hour、mro_rsrp
+# 目前支持 mro_main、mro_ecid、mro_ecid_hour、mro_rsrp、mro_ecid_yuan
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_rsrp
+mro_parse_sheet = mro_main,mro_ecid,mro_ecid_hour,mro_rsrp,mro_ecid_yuan
 
 #重叠覆盖率门限
 #门限1
