2017年7月22日 备份

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -3,7 +3,7 @@
 # 如果不清楚电脑多少核心，可以输入'min','mid','max'
 # 其中，min为单线程；mid为电脑核心的一半；max为满负荷运行
 # 放空或0则默认为满负荷运行
-process = 1
+process = max
 
 #支持处理MRO MRS两种类型，设置为 all 则两种类型的MR数据均处理
 parse_type = all
@@ -45,9 +45,9 @@ mrs_exception_sheet = MR.RIPPRB
 mro_rsrp_standard = 141
 
 # 需要生成的mro解码结果
-# 目前支持 mro_main、mro_ecid、mro_ecid_hour、mro_rsrp、mro_ecid_yuan
+# 目前支持 mro_main、mro_ecid、mro_rsrp
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_main,mro_ecid,mro_ecid_hour,mro_rsrp,mro_ecid_yuan
+mro_parse_sheet = mro_main,mro_ecid,mro_rsrp
 
 #重叠覆盖率门限
 #门限1
