--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -57,6 +57,12 @@ overlap_ncell_rsrp_1 = -113
 overlap_db_2 = 6
 overlap_ncell_rsrp_2 = -113
 
+#CMCC重叠覆盖率
+#小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
+cmcc_overlap_db = 6
+cmcc_overlap_scell_rsrp = -110
+cmcc_overlap_ncell_num = 3
+
 # MRO解码MR覆盖率门限
 mr_lap = -110
 
