--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -6,11 +6,11 @@ actemail = 0
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = raw_monitor
+timetype = day
 
 # 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
 # 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
-autodisabledpmmeasurement = 1
+autodisabledpmmeasurement = 0
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
@@ -18,10 +18,10 @@ timeint = 7
 
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
 # CP1 = LTECP1,yjnpo,GDlte_123
-CP2 = LTECP2,zj2015nsnnpo,GDlte_123
-# CP3 = LTECP3,cznpo,GDlte_123
-# CP4 = LTECP4,nokianpo4,GDlte_123
-# CP5 = LTECP5,czuser,GDlte_123
+# CP2 = LTECP2,zj2015nsnnpo,GDlte_123
+CP8 = LTECP8,cznpo,GDlte_123
+# CP3 = LTECP3,mmnpo,GDlte_123
+CP4 = LTECP4,zjnpo,GDlte_123
 
 
 [SQL_name]
@@ -88,6 +88,8 @@ QCI1掉线率网络级  = >=,1
 QCI1掉线次数 = !=,0
 ESRVCC成功率 = <=,95
 ESRVCC失败次数 = !=,0
+QCI1上行丢包率 = >=,1
+QCI1下行丢包率 = >=,1
 
 
 [email]
@@ -101,12 +103,12 @@ mail_pwd = nokia123
 
 # 设置收件人邮箱，多个邮箱地址之间用 , 隔开
 # sender = lxuteng@163.com
-receivers = 13829746035@139.com,15016519785@139.com,13828392621@139.com,18507684896@139.com,13829041415@139.com,guozxun@163.com,cz_nokia@163.com,cz_nokia@21cn.com,369896223@qq.com
+# receivers = 13829746035@139.com,15016519785@139.com,13828392621@139.com,18507684896@139.com,13829041415@139.com,guozxun@163.com,cz_nokia@163.com,cz_nokia@21cn.com,13828355215@139.com,13539372314@139.com,liangquan_hk@163.com
 # receivers = 13829746035@139.com,174626239@qq.com,cz_nokia@163.com
-# receivers = 13829746035@139.com
+receivers = 13829746035@139.com
 
 # 邮件主题，可以改成各个地市主题
 # subject = 潮州指标日报
-subject = 潮州日常kpi指标
+# subject = 潮州日常kpi指标
 # subject = 潮州15分钟实时通报
-# subject = ！！重要，请留意！！--潮州实时监控通报！
+subject = 潮州实时监控通报
