--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -16,10 +16,10 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\Ten\Desktop\工作临时文件夹\MRO\新建文件夹
+source_path = C:\Users\Ten\Desktop\工作临时文件夹\MRO\新建文件夹\新建文件夹
 
 #MR解码结果存放目录
-target_path = C:\Users\Ten\Desktop\工作临时文件夹\MRO\新建文件夹
+target_path = C:\Users\Ten\Desktop\工作临时文件夹\MRO\新建文件夹\新建文件夹
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #汇总类型可以为 'hour','sum'
