--- a/xml_tools/Auto_GPS_Freq_check/config.ini
+++ b/xml_tools/Auto_GPS_Freq_check/config.ini
@@ -1,7 +1,9 @@
-[main]
+﻿[main]
 # 是否在线获取数据
 online_get_file = 1
-
+# 并发连接基站数，此数值越大，获取基站数据用时越少，但不宜设置太大，控制在100以内；
+# 并发数设置越大，电脑负荷越高，使用时请注意电脑负荷，如电脑负荷过大反而会花费更多的时间；
+concurrent = 50
 # 获取时段数，生成文件里面10分钟生成一条数据，如果要获取一个小时数据，则填 6
 items = 1
 
@@ -9,13 +11,13 @@ items = 1
 gps_error_check = 1
 
 # GPS异常门限
-dacword = 4000
+dacword = 3500
 
 # 是否自动闭锁小区， 1 为启用， 0或空 不启用（此功能暂不可用）
 auto_locked = 0
 
 # 是否启用邮件通知功能， 1 为启用， 0或空 不启用
-actemail = 1
+actemail = 0
 
 mail_host = smtp.163.com
 mail_user = cz_nokia@163.com
