2017-9-24 兼容TL16A版本基站通报及监控；添加2017年下半年考核指标通报；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -6,7 +6,7 @@ actemail = 0
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = day
+timetype = raw_monitor
 
 # 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
 # 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
@@ -21,27 +21,27 @@ timeint = 7
 # CP2 = LTECP2,zj2015nsnnpo,GDlte_123
 CP8 = LTECP8,cznpo,GDlte_123
 # CP3 = LTECP3,mmnpo,GDlte_123
-CP4 = LTECP4,zjnpo,GDlte_123
+# CP4 = LTECP4,zjnpo,GDlte_123
 
 
 [SQL_name]
 # 程序所使用到的sql，此处请不要轻易改动
-main_kpi_day = city_day_kpi,city,day
-main_vokpi_day = city_VOLTE_DAY,city,day
+main_kpi_day = city_cell_day_all,city,day
+main_vokpi_day = city_cell_day_all,city,day
 
-main_kpi_hour = city_hour_kpi,city,hour
-main_vokpi_hour = city_VOLTE_HOUR,city,hour
+main_kpi_hour = city_cell_hour_all,city,hour
+main_vokpi_hour = city_cell_hour_all,city,hour
 
-main_kpi_raw = city_raw_kpi,city,raw
-main_vokpi_raw = city_VOLTE_RAW,city,raw
+main_kpi_raw = city_cell_raw_all,city,raw
+main_vokpi_raw = city_cell_raw_all,city,raw
 ############
-top_volte_hour = top_volte_hour,cell,hour
-top_volte_day = top_volte_day,cell,hour
-top_volte_raw = top_volte_raw,cell,hour
+top_volte_hour = cell_hour_all,cell,hour
+top_volte_day = cell_day_all,cell,hour
+top_volte_raw = cell_raw_all,cell,hour
 
-top_kpi_hour = top_kpi_hour,cell,hour
-top_kpi_day = top_kpi_day,cell,hour
-top_kpi_raw = top_kpi_raw,cell,hour
+top_kpi_hour = cell_hour_all,cell,hour
+top_kpi_day = cell_day_all,cell,hour
+top_kpi_raw = cell_raw_all,cell,hour
 ############
 sleepingcell = sleepingcell,cell,hour
 sleepingcell_raw = sleepingcell_raw,cell,hour
@@ -60,36 +60,28 @@ maxue_raw = maxue_raw,cell,hour
 # ----------关键kpi指标---------
 sdate = '',''
 city = '',''
-用户面PDCP上行数据量GB = '',''
-用户面PDCP下行数据量GB = '',''
-RRC连接建立成功率 = <=,99.9
-ERAB建立成功率 = <=,99.8
+用户面PDCP上行数据量TB = '',''
+用户面PDCP下行数据量TB = '',''
 无线接通率 = <=,98
 无线掉线率 = >=,1
-ERAB掉线率 = >=,1
 切换成功率ZB = '',''
 切换成功率QQ = <=,98
-小区可用率  = '',''
 拥塞次数 = '',''
 # ----------volte指标---------
-sdatetime = '',''
 QCI1话务量ERL = '',''
-QCI2话务量Erl = '',''
-QCI1最大用户数 = '',''
-QCI2最大用户数 = '',''
-QCI1流量Mb = '',''
-QCI2流量Mb = '',''
 QCI1_ERAB建立成功率  = <=,99
-qci2_erab建立成功率  = <=,99
-qci1_erab建立失败次数 = !=,0
-qci2_erab建立失败次数 = !=,0
-QCI1掉线率小区级  = >=,1
 QCI1掉线率网络级  = >=,1
-QCI1掉线次数 = !=,0
 ESRVCC成功率 = <=,95
-ESRVCC失败次数 = !=,0
+esrvcc成功率ZB = <=,95
 QCI1上行丢包率 = >=,1
 QCI1下行丢包率 = >=,1
+干扰小区大于-105 = '',''
+干扰小区大于-110 = '',''
+volte低接通占比 = >=,0.2
+volte高掉话占比 = >=,0.2
+volte上行高丢包占比 = >=,1.2
+volte下行高丢包占比 = >=,1.2
+激活用户数超300小区数 = >=,100
 
 
 [email]
@@ -100,10 +92,12 @@ mail_pwd = nokia123
 # mail_host = smtp.21cn.com
 # mail_user = cz_nokia@21cn.com
 # mail_pwd = Nokia123
-
+# mail_host = smtp.139.com
+# mail_user = nokia_zj@139.com
+# mail_pwd = ZJ@2015
 # 设置收件人邮箱，多个邮箱地址之间用 , 隔开
 # sender = lxuteng@163.com
-# receivers = 13829746035@139.com,15016519785@139.com,13828392621@139.com,18507684896@139.com,13829041415@139.com,guozxun@163.com,cz_nokia@163.com,cz_nokia@21cn.com,13828355215@139.com,13539372314@139.com,liangquan_hk@163.com
+# receivers = 13828355215@139.com,15017546769@139.com,13922903039@139.com,13539372314@139.com,13828392621@139.com,13829041415@139.com,yuhuanjian@139.com,15016519785@139.com,13829746035@139.com,liangquan_hk@163.com
 # receivers = 13829746035@139.com,174626239@qq.com,cz_nokia@163.com
 receivers = 13829746035@139.com
 
