--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -1,12 +1,12 @@
 [main]
 
 # 是否启用邮件通知功能，“1” 为启用， “0”或“空”不启用
-actemail = 1
+actemail = 0
 
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = raw_monitor
+timetype = day
 
 # 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
 # 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
@@ -22,68 +22,6 @@ timeint = 7
 CP8 = LTECP8,cznpo,GDlte_123
 # CP3 = LTECP3,mmnpo,GDlte_123
 # CP4 = LTECP4,zjnpo,GDlte_123
-
-
-[SQL_name]
-# 程序所使用到的sql，此处请不要轻易改动
-main_kpi_day = city_cell_day_all,city,day
-main_vokpi_day = city_cell_day_all,city,day
-
-main_kpi_hour = city_cell_hour_all,city,hour
-main_vokpi_hour = city_cell_hour_all,city,hour
-
-main_kpi_raw = city_cell_raw_all,city,raw
-main_vokpi_raw = city_cell_raw_all,city,raw
-############
-top_volte_hour = cell_hour_all,cell,hour
-top_volte_day = cell_day_all,cell,hour
-top_volte_raw = cell_raw_all,cell,hour
-
-top_kpi_hour = cell_hour_all,cell,hour
-top_kpi_day = cell_day_all,cell,hour
-top_kpi_raw = cell_raw_all,cell,hour
-############
-sleepingcell = sleepingcell,cell,hour
-sleepingcell_raw = sleepingcell_raw,cell,hour
-sleep_cell_16a_hour = sleep_cell_16a_hour,cell,hour
-sleep_cell_16a_raw = sleep_cell_16a_raw,cell,hour
-alarm = alarm,cell,hour
-############
-# 2016-11-14 新增
-maxue_day = maxue_day,cell,hour
-maxue_hour = maxue_hour,cell,hour
-maxue_raw = maxue_raw,cell,hour
-
-
-[kpi]
-# 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
-# 设置警告门限，逻辑符号与门限值用 ‘,’隔开，如：RRC连接建立成功率 = <=,99   此时当 RRC连接建立成功率 小于等于 99 时，结果呈现时会将指标显示为 加粗红色
-# 有部分指标不需设置门限，（如：时段、city）等，则填“  '','' ” ，不填或不按格式填结果会出错。
-# ----------关键kpi指标---------
-sdate = '',''
-city = '',''
-用户面PDCP上行数据量TB = '',''
-用户面PDCP下行数据量TB = '',''
-无线接通率 = <=,98
-无线掉线率 = >=,1
-切换成功率ZB = '',''
-切换成功率QQ = <=,98
-拥塞次数 = '',''
-# ----------volte指标---------
-QCI1话务量ERL = '',''
-QCI1_ERAB建立成功率  = <=,99
-QCI1掉线率网络级  = >=,1
-ESRVCC成功率 = <=,95
-esrvcc成功率ZB = <=,95
-QCI1上行丢包率 = >=,1
-QCI1下行丢包率 = >=,1
-干扰小区大于-105 = '',''
-干扰小区大于-110 = '',''
-volte低接通占比 = >=,0.2
-volte高掉话占比 = >=,0.2
-volte上行高丢包占比 = >=,1.2
-volte下行高丢包占比 = >=,1.2
-激活用户数超300小区数 = >=,100
 
 
 [email]
