2017年10月19日 完成自动小区block功能；

--- a/xml_tools/Auto_GPS_Freq_check/config.ini
+++ b/xml_tools/Auto_GPS_Freq_check/config.ini
@@ -5,6 +5,7 @@ online_get_file = 1
 # 并发数设置越大，电脑负荷越高，使用时请注意电脑负荷，如电脑负荷过大反而会花费更多的时间；
 concurrent = 50
 # 获取时段数，生成文件里面10分钟生成一条数据，如果要获取一个小时数据，则填 6
+# 默认填 1，获取最近一条数据；
 items = 1
 
 # 激活异常检测， 1 为启用， 0或空 不启用
