2017-10-23 修复解码MRO时部分小区部分时段缺失bug

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -16,10 +16,10 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\Ten\Desktop\工作临时文件夹\aoa\原始数据
+source_path = C:\Users\Ten\Desktop\工作临时文件夹\mrotest
 
 #MR解码结果存放目录
-target_path = C:\Users\Ten\Desktop\工作临时文件夹\aoa
+target_path = C:\Users\Ten\Desktop\工作临时文件夹\mrotest
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #汇总类型可以为  hour,sum
@@ -36,7 +36,7 @@ timing =
 [MRS]
 #处理MRsheet，如果只需要MR中的某个sheet，则可以在这里设置
 ;mrs_parse_sheet = MR.RSRP
-mrs_parse_sheet = MR.AOA
+mrs_parse_sheet = MR.RSRP
 
 #例外，因MR文件全部解码的话会比较慢且耗费内存，而有些sheet并不需要用到，则可以在这里设置不解码
 mrs_exception_sheet = MR.RIPPRB
@@ -48,7 +48,7 @@ mro_rsrp_standard = 141
 # 需要生成的mro解码结果
 # 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_aoa
+mro_parse_sheet = mro_rsrp,mro_main
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
