2017-11-1 raw_monitor报表中新增esrvcc切换准备失败监控报表；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -6,7 +6,7 @@ actemail = 0
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = day
+timetype = raw_monitor
 
 # 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
 # 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
