--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -53,10 +53,10 @@ QCI1上行丢包率 = >=,1
 QCI1下行丢包率 = >=,1
 干扰小区大于-105 = '',''
 干扰小区大于-110 = '',''
-volte低接通占比 = >=,0.2
-volte高掉话占比 = >=,0.2
-volte上行高丢包占比 = >=,1.2
-volte下行高丢包占比 = >=,1.2
+volte低接通占比 = >=,0.1
+volte高掉话占比 = >=,0.1
+volte上行高丢包占比 = >=,0.6
+volte下行高丢包占比 = >=,0.2
 volte低接通小区数 = '',''
 volte高掉话小区数 = '',''
 volte上行高丢包小区数 = '',''
@@ -249,7 +249,7 @@ RRC连接建立失败次数 = !=, 0
 QCI1无线接通率 = <, 95
 QCI1_ERAB建立成功率 = '',''
 qci1_erab建立请求次数 = '',''
-qci1_erab建立失败次数 = '',''
+qci1_erab建立失败次数 = >, 0
 QCI1话务量Erl_all = '',''
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
@@ -267,7 +267,7 @@ bts_version = '',''
 QCI1话务量Erl_all = '',''
 QCI1掉线率小区级 = >, 1
 QCI1掉线分母小区级 = '',''
-QCI1掉线次数 = '',''
+QCI1掉线次数 = >, 0
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
 
