2017-11-2 raw_monitor报表中新增VoLTE低接通小区监控报表； 2017-11-3 raw_monitor新增srvcc差小区、Volte低接通小区自动关闭测量功能； 2017-11-6 修复自动关闭测量功能log时间不准确问题；

--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -28,6 +28,8 @@ maxue_day = maxue_day,cell,hour
 maxue_hour = maxue_hour,cell,hour
 maxue_raw = maxue_raw,cell,hour
 
+# 2017-11-2 新增
+cell_raw_all_lowconnect = cell_raw_all_lowconnect,cell,raw
 
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
