--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -10,7 +10,13 @@ timetype = raw_monitor
 
 # 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
 # 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
-autodisabledpmmeasurement = 0
+autodisabledpmmeasurement = 1
+# 高拥塞小区
+enable_overcrowding = 0
+# esrvcc切换准备TOP小区
+enable_top_srvcc = 1
+# volte低接通小区
+enable_top_volte_connect = 1
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
