2017-11-9 raw_monitor新增下行高丢包小区自动关闭测量功能； 2017-11-9 关闭测量功能时使用多进程并发进行，提高闭锁效率； 2017-11-9 设置发送邮件时段；

--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -30,6 +30,8 @@ maxue_raw = maxue_raw,cell,hour
 
 # 2017-11-2 新增
 cell_raw_all_lowconnect = cell_raw_all_lowconnect,cell,raw
+# 2017-11-9 新增
+cell_raw_all_dl_low_vo_loss = cell_raw_all_dl_low_vo_loss,cell,raw
 
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
@@ -64,6 +66,7 @@ volte高掉话小区数 = '',''
 volte上行高丢包小区数 = '',''
 volte下行高丢包小区数 = '',''
 激活用户数超300小区数 = >=,100
+QCI1话务量Erl_亿阳 = >=,100
 
 # esrvcc切换top小区
 [top_srvcc]
@@ -73,6 +76,7 @@ ESRVCC请求次数 = '',''
 ESRVCC成功次数 = '',''
 ESRVCC切换失败次数 = !=, 0
 QCI1话务量Erl = '',''
+QCI1话务量Erl_亿阳 = '',''
 QCI1最大用户数 = '',''
 esrvcc切换失败次数ZB = !=, 0
 esrvcc请求次数ZB = '',''
@@ -85,6 +89,7 @@ qci1_erab建立成功率 = '',''
 qci1_erab建立请求次数 = '',''
 qci1_erab建立失败次数 = !=, 0
 QCI1话务量Erl = '',''
+QCI1话务量Erl_亿阳 = '',''
 QCI1最大用户数 = '',''
 
 # QCI2低接通小区
@@ -103,6 +108,7 @@ QCI1掉线率小区级 = '',''
 QCI1掉线分母小区级 = '',''
 QCI1掉线次数 = !=, 0
 QCI1话务量Erl = '',''
+QCI1话务量Erl_亿阳 = '',''
 QCI2话务量Erl = '',''
 QCI1最大用户数 = '',''
 QCI2最大用户数 = '',''
@@ -253,6 +259,7 @@ QCI1_ERAB建立成功率 = '',''
 qci1_erab建立请求次数 = '',''
 qci1_erab建立失败次数 = >, 0
 QCI1话务量Erl_all = '',''
+QCI1话务量Erl_亿阳 = '',''
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
 
@@ -267,6 +274,7 @@ bts_version = '',''
 无线掉线率分母 = '',''
 无线掉线率分子 = !=, 0
 QCI1话务量Erl_all = '',''
+QCI1话务量Erl_亿阳 = '',''
 QCI1掉线率小区级 = >, 1
 QCI1掉线分母小区级 = '',''
 QCI1掉线次数 = >, 0
@@ -277,13 +285,10 @@ PUSCH_RIP = >=, -110
 [top_volte_uldrop]
 enb_cell = '',cellname
 bts_version = '',''
-无线掉线率 = '',''
-无线掉线率分子 = '',''
 QCI1话务量Erl_all = '',''
-QCI1掉线率小区级 = '',''
+QCI1话务量Erl_亿阳 = '',''
 QCI1上行丢包率 = >, 1
 QCI1下行丢包率 = '',''
-QCI1掉线次数 = '',''
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
 
@@ -291,12 +296,9 @@ PUSCH_RIP = >=, -110
 [top_volte_dldrop]
 enb_cell = '',cellname
 bts_version = '',''
-无线掉线率 = '',''
-无线掉线率分子 = '',''
 QCI1话务量Erl_all = '',''
-QCI1掉线率小区级 = '',''
+QCI1话务量Erl_亿阳 = '',''
 QCI1上行丢包率 = '',''
 QCI1下行丢包率 = >, 1
-QCI1掉线次数 = '',''
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
