--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -3,6 +3,8 @@
 # 是否启用邮件通知功能，“1” 为启用， “0”或“空”不启用
 actemail = 0
 
+# 设置发送邮件时段，在此设置时段内，才启动邮件通知功能
+actemail_time = 08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
@@ -14,9 +16,11 @@ autodisabledpmmeasurement = 1
 # 高拥塞小区
 enable_overcrowding = 0
 # esrvcc切换准备TOP小区
-enable_top_srvcc = 1
+enable_top_srvcc = 0
 # volte低接通小区
-enable_top_volte_connect = 1
+enable_top_volte_connect = 0
+# volte高丢包
+enable_cell_raw_all_dl_low_vo_loss = 1
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
