2017-11-13 更换 cellinfo 格式，使其不再受编码方式影响；

--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -66,7 +66,7 @@ volte高掉话小区数 = '',''
 volte上行高丢包小区数 = '',''
 volte下行高丢包小区数 = '',''
 激活用户数超300小区数 = >=,100
-QCI1话务量Erl_亿阳 = >=,100
+QCI1话务量Erl_亿阳 = '',''
 
 # esrvcc切换top小区
 [top_srvcc]
@@ -250,12 +250,12 @@ maxNumRrcEmergency = '',''
 [top_volte_connect]
 enb_cell = '',cellname
 bts_version = '',''
-RRC连接建立成功率 = '',''
+RRC连接建立成功率 = '<95',''
 RRC连接建立请求次数 = '',''
 RRC连接建立失败次数 = !=, 0
 拥塞次数 = >, 0
 QCI1无线接通率 = <, 95
-QCI1_ERAB建立成功率 = '',''
+QCI1_ERAB建立成功率 = '<','95'
 qci1_erab建立请求次数 = '',''
 qci1_erab建立失败次数 = >, 0
 QCI1话务量Erl_all = '',''
@@ -288,7 +288,7 @@ bts_version = '',''
 QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
 QCI1上行丢包率 = >, 1
-QCI1下行丢包率 = '',''
+QCI1下行丢包率 = '>','1'
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
 
@@ -298,7 +298,7 @@ enb_cell = '',cellname
 bts_version = '',''
 QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
-QCI1上行丢包率 = '',''
+QCI1上行丢包率 = '>','1'
 QCI1下行丢包率 = >, 1
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
