--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -10,17 +10,21 @@ actemail_time = 08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
 timetype = raw_monitor
 
-# 当监控粒度设置为 raw_monitor，且出现高拥塞小区时，关闭高拥塞小区的RRC测量
-# 设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
+# 当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
 autodisabledpmmeasurement = 1
+
+# 以下为4个指标的激活开关，使用过期视各自指标情况激活对应的开关；
 # 高拥塞小区
 enable_overcrowding = 0
+
 # esrvcc切换准备TOP小区
-enable_top_srvcc = 0
+enable_top_srvcc = 1
+
 # volte低接通小区
-enable_top_volte_connect = 0
+enable_top_volte_connect = 1
+
 # volte高丢包
-enable_cell_raw_all_dl_low_vo_loss = 1
+enable_cell_raw_all_dl_low_vo_loss = 0
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
