2017-11-14 hour表volte低接通根据当天累计进行统计； 2017-11-16 volte低接通小区、srvcc切换差小区的kpi详情记录到log；

--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -32,6 +32,8 @@ maxue_raw = maxue_raw,cell,hour
 cell_raw_all_lowconnect = cell_raw_all_lowconnect,cell,raw
 # 2017-11-9 新增
 cell_raw_all_dl_low_vo_loss = cell_raw_all_dl_low_vo_loss,cell,raw
+;2017-11-14 新增
+cell_hour_all_lowconnect = cell_hour_all_lowconnect,cell,raw
 
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
@@ -70,6 +72,7 @@ QCI1话务量Erl_亿阳 = '',''
 
 # esrvcc切换top小区
 [top_srvcc]
+sdate = '',''
 enb_cell = '',cellname
 esrvcc成功率 = '',''
 ESRVCC请求次数 = '',''
@@ -248,6 +251,7 @@ maxNumRrcEmergency = '',''
 
 #volte低接通小区
 [top_volte_connect]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 RRC连接建立成功率 = '<95',''
@@ -262,6 +266,7 @@ QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
+mtEPSBearer_8006 = '',''
 
 # volte高掉话小区
 [top_volte_drop]
