--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -1,4 +1,4 @@
-[main]
+﻿[main]
 
 # 是否启用邮件通知功能，“1” 为启用， “0”或“空”不启用
 actemail = 0
@@ -8,7 +8,7 @@ actemail_time = 08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = raw_monitor
+timetype = hour
 
 # 当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
 autodisabledpmmeasurement = 1
@@ -34,8 +34,8 @@ timeint = 7
 # CP1 = LTECP1,yjnpo,GDlte_123
 # CP2 = LTECP2,zj2015nsnnpo,GDlte_123
 CP8 = LTECP8,cznpo,GDlte_123
-# CP3 = LTECP3,mmnpo,GDlte_123
-# CP4 = LTECP4,zjnpo,GDlte_123
+;CP3 = LTECP3,mmnpo,GDlte_123
+;CP4 = LTECP4,zjnpo,GDlte_123
 
 
 [email]
