2017-11-21 增加关闭测量的enbid例外，在例外列表里面的基站不会执行自动关闭测量； 2017年11月23日 休眠小区新算法，有随机接入申请但是没有RRC申请的小区；

--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -34,7 +34,8 @@ cell_raw_all_lowconnect = cell_raw_all_lowconnect,cell,raw
 cell_raw_all_dl_low_vo_loss = cell_raw_all_dl_low_vo_loss,cell,raw
 ;2017-11-14 新增
 cell_hour_all_lowconnect = cell_hour_all_lowconnect,cell,raw
-
+;2017-11-23 新增
+休眠小区 = 休眠小区,cell,raw
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
 # 设置警告门限，逻辑符号与门限值用 ‘,’隔开，如：RRC连接建立成功率 = <=,99   此时当 RRC连接建立成功率 小于等于 99 时，结果呈现时会将指标显示为 加粗红色
@@ -307,3 +308,15 @@ QCI1上行丢包率 = '>','1'
 QCI1下行丢包率 = >, 1
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
+
+# 休眠小区，有随机接入申请，但是全部失败
+[休眠小区]
+PERIOD_START_TIME = '',''
+enb_cell = '',cellname
+SYS_VERSION = '',''
+IP_ADDR = '',''
+BBU = '',''
+PREAMBLE_REQ = '',''
+PREAMBLE_SUCC = '',''
+RRC_STP_ATT = '',''
+RRC_STP_SUCC = '',''
