--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -8,10 +8,10 @@ actemail_time = 08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23
 
 [config]
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
-timetype = hour
+timetype = raw_monitor
 
-# 当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
-autodisabledpmmeasurement = 1
+# 自动关闭测量功能总开关，当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
+autodisabledpmmeasurement = 0
 
 # 以下为4个指标的激活开关，使用过期视各自指标情况激活对应的开关；
 # 高拥塞小区
@@ -33,7 +33,8 @@ timeint = 7
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
 # CP1 = LTECP1,yjnpo,GDlte_123
 # CP2 = LTECP2,zj2015nsnnpo,GDlte_123
-CP8 = LTECP8,cznpo,GDlte_123
+;CP8 = LTECP8,cznpo,GDlte_123
+CP6 = LTECP6,mznpo,GDlte_123
 ;CP3 = LTECP3,mmnpo,GDlte_123
 ;CP4 = LTECP4,zjnpo,GDlte_123
 
