2017-11-23 休眠小区新算法，有随机接入申请但是没有RRC申请的小区； 2017-12-1 raw_monitor模块改进srvcc切换top小区关闭测量算法，支持 关闭srvcc切换开关、修改B2门限两种模式；             关闭srvcc切换开关模式已修复当激活actGsmSrvccMeasOpt时关闭srvcc切换功能参数报错问题； 2017-12-9 raw_monitor模块增加小区可用率检测； 2017-12-9 raw_monitor模块增加volte掉话检测；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -13,18 +13,26 @@ timetype = raw_monitor
 # 自动关闭测量功能总开关，当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
 autodisabledpmmeasurement = 0
 
-# 以下为4个指标的激活开关，使用过期视各自指标情况激活对应的开关；
+# 以下为4个指标的激活开关，使用过程视各自指标情况激活对应的开关；
 # 高拥塞小区
-enable_overcrowding = 0
+enable_overcrowding = 1
 
 # esrvcc切换准备TOP小区
 enable_top_srvcc = 1
+# 目前支持两种类型调整，
+# top_srvcc_type设置为 disactive 时，直接关闭srvcc切换开关；
+# top_srvcc_type设置为 b2 时，调整b2门限值；
+top_srvcc_type = disactive
+b2Threshold1GERANQci1 = -116
+b2Threshold2RssiGERANQci1_1 = -70
+b2Threshold2RssiGERANQci1_2 = -47
+#TODO-116/-70 然后如果是-70改成-47
 
 # volte低接通小区
 enable_top_volte_connect = 1
 
 # volte高丢包
-enable_cell_raw_all_dl_low_vo_loss = 0
+enable_cell_raw_all_dl_low_vo_loss = 1
 
 #每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
 timeint = 7
@@ -33,17 +41,20 @@ timeint = 7
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
 # CP1 = LTECP1,yjnpo,GDlte_123
 # CP2 = LTECP2,zj2015nsnnpo,GDlte_123
-;CP8 = LTECP8,cznpo,GDlte_123
-CP6 = LTECP6,mznpo,GDlte_123
+CP8 = LTECP8,cznpo,GDlte_123
+;CP6 = LTECP6,mznpo,GDlte_123
 ;CP3 = LTECP3,mmnpo,GDlte_123
 ;CP4 = LTECP4,zjnpo,GDlte_123
 
 
 [email]
 
-mail_host = smtp.163.com
-mail_user = cz_nokia@163.com
-mail_pwd = nokia123
+;mail_host = smtp.163.com
+;mail_user = cz_nokia@163.com
+;mail_pwd = nokia123
+mail_host = smtp.126.com
+mail_user = cz_nokia_1@126.com
+mail_pwd = Nokia1234
 ;mail_host = smtp.139.com
 ;mail_user = nokia_zj@139.com
 ;mail_pwd = ZJ@2015
