--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -36,6 +36,8 @@ cell_raw_all_dl_low_vo_loss = cell_raw_all_dl_low_vo_loss,cell,raw
 cell_hour_all_lowconnect = cell_hour_all_lowconnect,cell,raw
 ;2017-11-23 新增
 休眠小区 = 休眠小区,cell,raw
+;2017-12-9 新增
+可用率 = 可用率,cell,raw
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
 # 设置警告门限，逻辑符号与门限值用 ‘,’隔开，如：RRC连接建立成功率 = <=,99   此时当 RRC连接建立成功率 小于等于 99 时，结果呈现时会将指标显示为 加粗红色
@@ -88,6 +90,7 @@ esrvcc成功率ZB = '',''
 
 # QCI1低接通小区
 [top_qci1connect]
+sdate = '',''
 enb_cell = '',cellname
 qci1_erab建立成功率 = '',''
 qci1_erab建立请求次数 = '',''
@@ -98,6 +101,7 @@ QCI1最大用户数 = '',''
 
 # QCI2低接通小区
 [top_qci2connect]
+sdate = '',''
 enb_cell = '',cellname
 qci2_erab建立成功率 = '',''
 qci2_erab建立请求次数 = '',''
@@ -107,6 +111,7 @@ QCI2最大用户数 = '',''
 
 # QCI1高掉话小区
 [top_qci1drop]
+sdate = '',''
 enb_cell = '',cellname
 QCI1掉线率小区级 = '',''
 QCI1掉线分母小区级 = '',''
@@ -119,6 +124,7 @@ QCI2最大用户数 = '',''
 
 # RRC连接建立成功率TOP小区
 [top_rrcconnect]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 RRC连接建立成功率 = '',''
@@ -137,6 +143,7 @@ PUSCH_RIP = >=, -110
 
 # ERAB建立成功率TOP小区
 [top_erabconnect]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 ERAB建立成功率 = '',''
@@ -147,6 +154,7 @@ PUSCH_RIP = >=, -110
 
 # 切换成功率TOP小区
 [top_handover]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 切换成功率QQ = '',''
@@ -158,6 +166,7 @@ PUSCH_RIP = >=, -110
 
 # 无线掉线率TOP小区
 [top_radiodrop]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 无线掉线率 = '',''
@@ -170,6 +179,7 @@ PUSCH_RIP = >=, -110
 
 # ERAB掉线TOP小区
 [top_erabdrop]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 ERAB掉线率 = '',''
@@ -182,6 +192,7 @@ PUSCH_RIP = >=, -110
 
 # 休眠小区
 [sleepingcell]
+sdate = '',''
 enb_cell = '',cellname
 休眠时段数 = '',''
 DRX激活子帧数 = '',''
@@ -189,6 +200,7 @@ DRX睡眠子帧数 = ,
 
 # 休眠及零流量小区
 [sleep_cell_16a]
+sdate = '',''
 enb_cell = '',cellname
 BTS_VERSION = '',''
 休眠时段数 = '',''
@@ -209,18 +221,19 @@ DRX睡眠子帧数 = '',''
 
 # 拥塞小区
 [overcrowding]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 actDrx = '',''
 RRC连接建立成功率 = '',''
 RRC连接建立请求次数 = '',''
-RRC连接建立失败次数 = !=, 0
-拥塞次数 = >, 0
-控制面过负荷拥塞 = >, 0
-用户面过负荷拥塞 = >, 0
-PUCCH资源不足拥塞 = >, 0
-最大RRC受限拥塞 = >, 0
-MME过负荷拥塞 = >, 0
+RRC连接建立失败次数 = !=,0
+拥塞次数 = >,0
+控制面过负荷拥塞 = >,0
+用户面过负荷拥塞 = >,0
+PUCCH资源不足拥塞 = >,0
+最大RRC受限拥塞 = >,0
+MME过负荷拥塞 = >,0
 RRC最大连接数 = '',''
 最大激活用户数 = '',''
 有效RRC连接最大数 = '',''
@@ -228,6 +241,7 @@ PUSCH_RIP = >=, -110
 
 # 告警（干扰）
 [alarm]
+sdate = '',''
 lnbtsid = '',''
 IP = '',''
 NAME = '',''
@@ -237,6 +251,7 @@ SUPPLEMENTARY_INFO = '',''
 
 ;激活用户数超门限小区
 [maxue]
+sdate = '',''
 ENB_CELL = '',cellname
 VERSION = '',''
 带宽 = '',''
@@ -255,14 +270,14 @@ maxNumRrcEmergency = '',''
 sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
-RRC连接建立成功率 = '<95',''
+RRC连接建立成功率 = <,95
 RRC连接建立请求次数 = '',''
-RRC连接建立失败次数 = !=, 0
+RRC连接建立失败次数 = !=,0
 拥塞次数 = >, 0
-QCI1无线接通率 = <, 95
-QCI1_ERAB建立成功率 = '<','95'
+QCI1无线接通率 = <,95
+QCI1_ERAB建立成功率 = <,95
 qci1_erab建立请求次数 = '',''
-qci1_erab建立失败次数 = >, 0
+qci1_erab建立失败次数 = >,0
 QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
 PHR小于0比例 = '',''
@@ -271,6 +286,7 @@ mtEPSBearer_8006 = '',''
 
 # volte高掉话小区
 [top_volte_drop]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 无线掉线率 = '',''
@@ -278,36 +294,42 @@ bts_version = '',''
 切换请求次数QQ = '',''
 切换请求次数ZB = '',''
 无线掉线率分母 = '',''
-无线掉线率分子 = !=, 0
+无线掉线率分子 = !=,0
 QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
-QCI1掉线率小区级 = >, 1
+QCI1掉线率小区级 = >,1
 QCI1掉线分母小区级 = '',''
-QCI1掉线次数 = >, 0
+QCI1掉线次数 = >,0
 PHR小于0比例 = '',''
-PUSCH_RIP = >=, -110
+PUSCH_RIP = >=,-110
+QCI1掉线次数_监控_1 = !=,0
+QCI1掉线次数_监控_2 = !=,0
+VOLTE切换成功率 = !=,0
+VOLTE切换失败次数 = !=,0
 
 # volte上行高丢包小区
 [top_volte_uldrop]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
-QCI1上行丢包率 = >, 1
-QCI1下行丢包率 = '>','1'
+QCI1上行丢包率 = >,1
+QCI1下行丢包率 = >,1
 PHR小于0比例 = '',''
-PUSCH_RIP = >=, -110
+PUSCH_RIP = >=,-110
 
 # volte下行高丢包小区
 [top_volte_dldrop]
+sdate = '',''
 enb_cell = '',cellname
 bts_version = '',''
 QCI1话务量Erl_all = '',''
 QCI1话务量Erl_亿阳 = '',''
-QCI1上行丢包率 = '>','1'
-QCI1下行丢包率 = >, 1
+QCI1上行丢包率 = >,1
+QCI1下行丢包率 = >,1
 PHR小于0比例 = '',''
-PUSCH_RIP = >=, -110
+PUSCH_RIP = >=,-110
 
 # 休眠小区，有随机接入申请，但是全部失败
 [休眠小区]
@@ -320,3 +342,17 @@ PREAMBLE_REQ = '',''
 PREAMBLE_SUCC = '',''
 RRC_STP_ATT = '',''
 RRC_STP_SUCC = '',''
+
+# 可用率异常监控
+[可用率]
+ENB_ID = '',''
+ENB_CELL = '',cellname
+小区可用率 = <,90
+最近一个钟出现次数 = '',''
+QCI1掉线次数 = >,0
+QCI1掉线分母小区级 = '',''
+QCI1掉线率小区级 = '',''
+无线掉线率 = '',''
+QCI1话务量ERL = '',''
+上行丢包率 = '',''
+下行丢包率 = '',''
