2018-1-18 兼容FDD MRO解码MR覆盖率

--- a/MRparse/MR_parser/config.ini
+++ b/MRparse/MR_parser/config.ini
@@ -16,17 +16,17 @@ file_type = gz
 
 #MR原始数据存放目录
 # source_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
-source_path = C:\Users\Ten\Desktop\工作临时文件夹\mrotest
+source_path = D:\test
 
 #MR解码结果存放目录
-target_path = C:\Users\Ten\Desktop\工作临时文件夹\mrotest
+target_path = D:\test
 #target_path = C:\Users\lxute\Desktop\工作临时文件夹\mrs
 
 #汇总类型可以为  hour,sum
 #设置为 hour 时，会按每个小时进行汇总，每小时会出一条数据
 #设置为 sum 时，则会按照 ECID 进行汇总，每 ECID 会出一条数据
 #如果两者都需要，则设置为  hour,sum
-gather_type = sum,hour
+gather_type = sum
 
 #定时功能,设置为 1 则激活，设置为 0 或 空 则不激活
 #当激活定时功能时，会默认读取 source_path\昨天（格式为 yyyymmdd ) 下的文件，解码结果则存放在local_path\昨天（格式为 yyymmdd) 下
@@ -48,7 +48,7 @@ mro_rsrp_standard = 141
 # 需要生成的mro解码结果
 # 目前支持 mro_main,mro_ecid,mro_rsrp,mro_aoa
 # 处理多张表用 ， 隔开
-mro_parse_sheet = mro_rsrp,mro_main
+mro_parse_sheet = mro_rsrp
 
 #CMCC重叠覆盖率
 #小区同频重叠覆盖度为主小区RSRP-邻小区 RSRP<6dB的邻小区>=3的采样点数【主小区RSRP>=-110dbm且主邻小区频点相同】
