--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -1,54 +1,102 @@
 ﻿[main]
-
+#---------------------------------------------------------------------------------------------------------------------
 # 是否启用邮件通知功能，“1” 为启用， “0”或“空”不启用
 actemail = 0
-
+#---------------------------------------------------------------------------------------------------------------------
 # 设置发送邮件时段，在此设置时段内，才启动邮件通知功能
 actemail_time = 08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23
+#---------------------------------------------------------------------------------------------------------------------
 
+#######################################################################################################################
 [config]
+#---------------------------------------------------------------------------------------------------------------------
 #监控粒度，可以为‘day’，‘hour’，‘raw’，‘raw_monitor’
 timetype = raw_monitor
-
+#每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
+timeint = 7
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
 # 自动关闭测量功能总开关，当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
 autodisabledpmmeasurement = 0
-
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
 # 以下为4个指标的激活开关，使用过程视各自指标情况激活对应的开关；
 # 高拥塞小区
 enable_overcrowding = 1
-
+# 当拥塞次数 > overcrowding_num时，进行通报处理；
+overcrowding_num = 500
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
 # esrvcc切换准备TOP小区
 enable_top_srvcc = 1
+# esrvcc切换准备TOP小区门限，当esrvcc切换准备失败次数 > top_srvcc_fail_num 时，则判断为该时段差小区
+top_srvcc_fail_num = 4
 # 目前支持两种类型调整，
 # top_srvcc_type设置为 disactive 时，直接关闭srvcc切换开关；
 # top_srvcc_type设置为 b2 时，调整b2门限值；
-top_srvcc_type = disactive
+top_srvcc_type = b2
+# top_srvcc_type设置为 b2 时，按以下B2门限进行调整
 b2Threshold1GERANQci1 = -116
 b2Threshold2RssiGERANQci1_1 = -70
+#如果b2Threshold2RssiGERANQci1大于等于-70改成-47
 b2Threshold2RssiGERANQci1_2 = -47
-#TODO-116/-70 然后如果是-70改成-47
-
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
 # volte低接通小区
-enable_top_volte_connect = 1
-
+enable_top_volte_connect = 0
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
 # volte高丢包
 enable_cell_raw_all_dl_low_vo_loss = 1
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
+# volte高掉话
+enable_cell_raw_all_volte_drop = 1
+# volte掉话次数监控门限，当小区的掉话次数 > volte_drop_num时进行通报处理
+volte_drop_num = 1
+# 当出现高掉话小区时，调整B2门限为以下值
+drop_b2Threshold1GERANQci1 = -95
+drop_b2Threshold2RssiGERANQci1 = -90
+#---------------------------------------------------------------------------------------------------------------------
 
-#每次呈现最近时段数目，如，想要结果中呈现最近3个钟的指标，则填 3
-timeint = 7
+[raw_monitor_report]
+#休眠小区，有随机接入申请，但是全部失败
+active_sleep_cell_report = 1
+#可用率异常小区
+active_available_report = 1
+# volte高掉话小区
+active_volte_drop_report = 1
+# esrvcc切换差小区
+active_srvcc_report = 1
+# volte低接通小区
+active_volte_connect_report = 1
+# 高拥塞小区
+active_overcrowding_report = 1
+# QCI1上下行丢包率
+active_volte_packet_loss_report = 1
+# GPS故障小区
+active_gps_alarm_report = 1
+# 休眠小区
+active_sleep_cell_1_report = 1
+# 休眠及零流量小区
+active_sleep_cell_2_report = 1
+# 最大激活用户数检测
+active_maxue_report = 1
 
 
+
+#######################################################################################################################
 [db]#请按此格式填写 名称 = 数据库名称,user@pwd ，可以添加多个数据库
 # CP1 = LTECP1,yjnpo,GDlte_123
 # CP2 = LTECP2,zj2015nsnnpo,GDlte_123
+;CP8 = 188.2.170.51:1521/oss,cznpo,GDlte_123
 CP8 = LTECP8,cznpo,GDlte_123
 ;CP6 = LTECP6,mznpo,GDlte_123
 ;CP3 = LTECP3,mmnpo,GDlte_123
 ;CP4 = LTECP4,zjnpo,GDlte_123
 
-
+#######################################################################################################################
 [email]
-
 ;mail_host = smtp.163.com
 ;mail_user = cz_nokia@163.com
 ;mail_pwd = nokia123
