2018-1-24 增加高流量小区监控通报；

--- a/AutoMonitor/config.ini
+++ b/AutoMonitor/config.ini
@@ -17,7 +17,7 @@ timeint = 7
 #---------------------------------------------------------------------------------------------------------------------
 #---------------------------------------------------------------------------------------------------------------------
 # 自动关闭测量功能总开关，当监控粒度设置为 raw_monitor时，且autodisabledpmmeasurement设置为 1 时激活此功能，设置为 0 或 空 时关闭此功能
-autodisabledpmmeasurement = 0
+autodisabledpmmeasurement = 1
 #---------------------------------------------------------------------------------------------------------------------
 #---------------------------------------------------------------------------------------------------------------------
 # 以下为4个指标的激活开关，使用过程视各自指标情况激活对应的开关；
@@ -42,8 +42,12 @@ b2Threshold2RssiGERANQci1_1 = -70
 b2Threshold2RssiGERANQci1_2 = -47
 #---------------------------------------------------------------------------------------------------------------------
 #---------------------------------------------------------------------------------------------------------------------
-# volte低接通小区
+# volte低接通小区,小于1erl小区监控
 enable_top_volte_connect = 0
+#---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
+# volte低接通小区，大于1erl小区监控
+enable_top_volte_connect_1 = 1
 #---------------------------------------------------------------------------------------------------------------------
 #---------------------------------------------------------------------------------------------------------------------
 # volte高丢包
@@ -58,8 +62,13 @@ volte_drop_num = 1
 drop_b2Threshold1GERANQci1 = -95
 drop_b2Threshold2RssiGERANQci1 = -90
 #---------------------------------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------------------------------
+# 高流量小区，暂不支持调整
+enable_highload = 0
+#---------------------------------------------------------------------------------------------------------------------
 
 [raw_monitor_report]
+# 激活相关报告，设置为1；不激活相关报告，设置为 0
 #休眠小区，有随机接入申请，但是全部失败
 active_sleep_cell_report = 1
 #可用率异常小区
@@ -68,8 +77,10 @@ active_available_report = 1
 active_volte_drop_report = 1
 # esrvcc切换差小区
 active_srvcc_report = 1
-# volte低接通小区
+# volte低接通小区,小于1erl小区监控
 active_volte_connect_report = 1
+# volte低接通小区，大于1erl小区监控
+active_volte_connect_1_report = 1
 # 高拥塞小区
 active_overcrowding_report = 1
 # QCI1上下行丢包率
@@ -82,6 +93,8 @@ active_sleep_cell_1_report = 1
 active_sleep_cell_2_report = 1
 # 最大激活用户数检测
 active_maxue_report = 1
+# 高流量小区检测
+active_highload_report = 1
 
 
 
