--- a/AutoMonitor/config_sql.ini
+++ b/AutoMonitor/config_sql.ini
@@ -30,6 +30,8 @@ maxue_raw = maxue_raw,cell,hour
 
 # 2017-11-2 新增
 cell_raw_all_lowconnect = cell_raw_all_lowconnect,cell,raw
+# 2018-1-23 新增
+cell_raw_all_lowconnect_1 = cell_raw_all_lowconnect_1,cell,raw
 # 2017-11-9 新增
 cell_raw_all_dl_low_vo_loss = cell_raw_all_dl_low_vo_loss,cell,raw
 ;2017-11-14 新增
@@ -38,6 +40,12 @@ cell_hour_all_lowconnect = cell_hour_all_lowconnect,cell,raw
 休眠小区 = 休眠小区,cell,raw
 ;2017-12-9 新增
 可用率 = 可用率,cell,raw
+;2018-1-24 新增
+高流量小区_raw = 高流量小区_raw,cell,raw
+;2018-1-24 新增
+高流量小区_hour = 高流量小区_hour,cell,hour
+;2018-1-24 新增
+高流量小区_day = 高流量小区_day,cell,hour
 [kpi]
 # 指标名称需要与sql中设置的一致，否则会匹配不到对应的指标；
 # 设置警告门限，逻辑符号与门限值用 ‘,’隔开，如：RRC连接建立成功率 = <=,99   此时当 RRC连接建立成功率 小于等于 99 时，结果呈现时会将指标显示为 加粗红色
@@ -283,6 +291,7 @@ QCI1话务量Erl_亿阳 = '',''
 PHR小于0比例 = '',''
 PUSCH_RIP = >=, -110
 mtEPSBearer_8006 = '',''
+mtUEstate_8013 = '',''
 
 # volte高掉话小区
 [top_volte_drop]
@@ -356,3 +365,14 @@ QCI1掉线率小区级 = '',''
 QCI1话务量ERL = '',''
 上行丢包率 = '',''
 下行丢包率 = '',''
+
+# 高流量小区监控
+[高流量小区]
+SDATE = '',''
+ENB_CELL = '',cellname
+业务量GB = '',''
+RRC最大连接数 = '',''
+有效RRC连接最大数 = '',''
+上行PRB平均利用率NEW = '',''
+下行PRB平均利用率NEW = '',''
+PDCCH信道CCE占用率 = '',''
